# bot

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Grok.md  INTEGRATION_PLAN_121.md  LICENSE  PROJECT_LAYOUT.md  TESTING.md  bot.service  build.rs  config.toml  flow_map.md  hartbeat.md  jest.config.js  new_tasks.json  readme.md  repair_tasklist.js  router.toml.example  system_manifest.md
.cargo/: config.toml
.zed/: 1-126task_list.json  127-144task_list.json.bak  127-149task_list.json.bak  backup_task_list.json  task_list.json  task_list.json.bak
Doc's/: Grok.md  PROJECT_LAYOUT.md  email_setup.md  flow_map.md  system_manifest.md  tools_reference.md
Doc's/AiSummary/: task_audit_1_59.md
__tests__/: commands.test.ts
bot_installer/: Cargo.toml
docs/: HOW_TO_ADD_NEW_BACKEND.md  HOW_TO_DEBUG_ROUTING.md  HOW_TO_TUNE_ROUTER.md  LLM_ROUTER_ARCHITECTURE.md  LLM_ROUTER_DATA_FLOW.md  LLM_ROUTER_DEPENDENCIES.md  LLM_ROUTER_DOCS_PIPELINE.md  LLM_ROUTER_EXAMPLES.md  LLM_ROUTER_EXTENSION_HOOKS.md  LLM_ROUTER_PRODUCTION_CHECKLIST.md  LLM_ROUTER_SUBSYSTEMS.md  central_bus.md  checksum_resume.md  cli_commands.md  configuration.md  docker_systemd.md  evolution_cycle.md  hyevo.md  hyevo_tests.md  integration_harness_design.md  logging.md  memory_system.md  metrics.md  ollama_tool_calling.md  planning_loop.md  plugins.md  population_manager.md  reasoning.md  skills_hooks.md  terminal_cli.md  unix_socket.md  vector_memory.md  web_interface.md  workflow_execution_cpu.md  workflow_registry.md  workflow_selection.md  workflow_triggers.md
logs/: bus_log.md  chat_log.md  email_outbox.md  error_log.md
src/: bayesian.rs  lib.rs  main.rs  utils.rs
src/a2a/: a2a_handler.rs
src/bus/: handler.rs  mod.rs
src/commands/: hello.ts  help.ts  index.ts  ping.ts
src/config/: manifest.rs  mod.rs  reasoning.rs  socket.rs
src/cpu/: cpu.rs  executor.rs  instructions.rs  interfaces.rs  interrupts.rs  mod.rs  scheduler.rs  state.rs  time_scheduler.rs  workflow_executor.rs
src/cron/: cron_handler.rs
src/events/: onMessage.ts  onReady.ts
src/hooks/: bayesian.rs  mod.rs
src/hy_evo/: ab_testing.rs  chaos.rs  crossover.rs  diff.rs  engine.rs  failure_injection.rs  genome.rs  integration.rs  metrics.rs  mod.rs  mutation.rs  node.rs  population.rs  reflection.rs  registry.rs  scoring.rs  selection.rs  storage.rs  templates.rs  tests.rs  triggers.rs  visualization.rs  workflow.rs
src/io/: Cargo.toml  io.rs  io_test.rs  json_lines.rs  mod.rs  socket_permissions.rs  startup.rs  unix_cli.rs  unix_socket.rs
src/io/llm_gemini/: Cargo.toml  gemini_handler_test.rs  mod.rs
src/io/ollama/: Cargo.toml  keepalive.rs  llm.rs  llm_impl.rs  llm_trait.rs  mod.rs  ollama_handler_test.rs
src/io/terminal/: Cargo.toml  cli_test.rs  mod.rs
src/io/unix_cli/: bus_integration_tests.rs  checksum.rs  cli_auth.rs  cli_colors.rs  concurrent_clients.rs  config_socket_path.rs  documentation_updates.rs  encryption.rs  error_handling_socket.rs  json_lines_protocol.rs  json_schema.rs  metrics.rs  plugins.rs  resume_transfer.rs  socket_permissions.rs
src/io/web_server/: Cargo.toml  mod.rs  web_server_test.rs
src/io/web_server/static/: index.html
src/llm/: ollama.rs
src/mcp/: mcp_handler.rs
src/memory/: episodic.rs  manager.rs  mod.rs  vector.rs
src/planning/: mod.rs  planner.rs  reflection.rs
src/reasoning/: engine.rs  mod.rs  observability.rs  planning.rs  self_correction.rs  state.rs
src/router/: complexity.rs  config.rs  config_tests.rs  context.rs  debug.rs  debug_cli.rs  debug_narrative.rs  debug_tests.rs  deployment.rs  docs.rs  e2e_tests.rs  fallback.rs  health.rs  integration.rs  integration_tests.rs  mod.rs  observability.rs  override.rs  perf.rs  schedule.rs  security.rs  strategy.rs  telemetry.rs  tui.rs
src/skills/: bayesian.rs  marketplace.rs  mod.rs  sandbox.rs
src/tools/: email_tools.rs  file_tools.rs  mod.rs  system_tools.rs
src/utils/: agent_comm.rs  aider.rs  alphazero.rs  anonymize.rs  audit.rs  auto_gpt.rs  autogen.rs  autoscale.rs  baby_agi.rs  bluegreen.rs  canary.rs  circuit_breaker.rs  code_llama.rs  codegeex.rs  codeium.rs  codeparrot.rs  codewhisperer.rs  cody.rs  compliance.rs  compression.rs  constitutional.rs  continue_dev.rs  copilot.rs  crewai.rs  cursor.rs  debate.rs  dedup.rs  deepseek_coder.rs  deployment.rs  devin.rs  diff_privacy.rs  distillation.rs  embeddings.rs  encoding.rs  es.rs  experiment.rs  feature_flags.rs  federated.rs  ghostwriter.rs  haystack.rs  (+41 more)
tests/: integration_harness.rs  unix_socket_test.rs
tests/scenarios/: bus_tests.rs  cpu_tests.rs  error_tests.rs  hyevo_tests.rs  llm_tests.rs  memory_tests.rs  mod.rs  skills_tests.rs
