[package]
name = "bot"
version = "1.0.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.10"
serenity = { version = "0.11", features = ["model", "cache", "gateway"] }
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "net",
    "sync",
] }
axum = { version = "0.7", features = ["ws"] }
hyper = { version = "1", features = ["http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.13"
tower = "0.5"
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
axum-server = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
lettre = { version = "0.10", features = ["smtp-transport", "native-tls"] }
imap = "3.0.0-alpha.15"
native-tls = "0.2"
pulldown-cmark = "0.11"
similar = "2.5"
