[package]
name = "bot"
version = "1.0.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11.10"
#serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current", features = ["full"] }


tokio = { version = "1.52.3", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "net",
    "sync",
] }
axum = { version = "0.8.9", features = ["ws"] }
hyper = { version = "1", features = ["http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rcgen = "0.14.8"
tower = "0.5"
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.13.4", features = ["json", "blocking", "rustls"] }
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
rand = "0.10.1"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
lettre = { version = "0.11.22", features = ["smtp-transport", "native-tls"] }
imap = "3.0.0-alpha.15"
native-tls = "0.2"
pulldown-cmark = "0.13.4"
similar = "3.1.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "json"] }

[[bin]]
name = "install"
path = "src/bin/installer.rs"
