[package]
name = "agentos_io_llm_gemini"
version = "0.1.0"
edition = "2021"
Authors = ["AgentOS Team"]
description = "Gemini LLM Handler for Agent OS IO - Placeholder for future Gemini API integration"

[lib]
name = "agentos_io_llm_gemini"
path = "gemini_handler.rs"

[dependencies]
# Placeholder for future dependencies
# reqwest = { version = "0.11", features = ["json"] }  # For HTTP requests to Gemini API
# serde = { version = "1.0", features = ["derive"] }  # For JSON serialization/deserialization
# tokio = { version = "1.0", features = ["full"] }  # For async operations

[dev-dependencies]
# Dependencies for testing
# tokio-test = "0.4"  # For async testing
